--- a/Accueil.html
+++ b/Accueil.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <title>Accueil</title>
 </head>
 <body>
-    
+<div class="rectangle_connexion"></div>
+<div class="Mdp"></div>
 </body>
 </html>
