--- a/Accueil.html
+++ b/Accueil.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Accueil</title>
 </head>
 <body>
-<div class="rectangle_connexion"></div>
-<div class="Mdp"></div>
+    <!--Entête-->
+    <!--<img src="logo.jpeg" alt="Logo">-->
+    <div class="titre">
+        <h1>Portail de connexion</h1>
+    </div>
+
+    <!--Rectangle identification-->
+        <div class="rectangle_connexion">
+            <div class="box_email">
+                <label for="mail" id="label_email">Rentrez votre mail :</label>
+                <input type="mail" id="email">
+            </div>
+            <div class="box_mdp">
+                <label for="email">Rentrez votre mot de passe :</label>
+                <input type="password" id="mdp">
+            </div>
+            <div class="bouton_validation">
+                <input type="submit" value="Se connecter">
+            </div>
+            
 </body>
 </html>
