--- a/Accueil.html
+++ b/Accueil.html
@@ -20,11 +20,10 @@
                 <input type="mail" id="email">
             </div>
             <div class="box_mdp">
-                <label for="email">Rentrez votre mot de passe :</label>
+                <label for="email" id="label_mdp">Rentrez votre mot de passe :</label>
                 <input type="password" id="mdp">
             </div>
-            <div class="bouton_validation">
-                <input type="submit" value="Se connecter">
+                <button class="bouton_validation" value="Se connecter">
             </div>
             
 </body>
