petit test du matin

--- a/Accueil.html
+++ b/Accueil.html
@@ -25,6 +25,7 @@
             </div>
                 <button class="bouton_validation" value="Se connecter">
             </div>
+            <p>test</p>
             
 </body>
 </html>
